recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value j
j = 0;
^Spiral:6: error: not found: value j
avance(j);
       ^Spiral:9: error: not found: value j
j = j+increment;
^